[metadata]
name = tron-battle
version = attr: tron_battle.__version__
url = https://github.com/yamasakih/tron-battle
license = MIT
author = Hiroyuki Yamasaki
author_email = yamasaki.phone@gmail.com
description = Repository for tron battle
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = tron_battle

# [options.extras_require]
# dev =
# black
# flake8
# isort
# mypy
# pytest
# pytest-datadir

# [flake8]
# exclude =
# ./.mypy_cache/,
# ./.pytest_cache/,
# ./.venv/,
# ./build/,
# ./docs/
